fixed svg injection flicker, added animation to logo, changed position on hero

--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -32,6 +32,10 @@ p {
     background-color: $lightblue;
 }
 
+img.svg-inject {
+  display: none;
+}
+
 
 
 
